# file-server-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: labels.yml
.github/DISCUSSION_TEMPLATE/: questions.yml  request.yml
.github/workflows/: docker-build.yml
sql/: ddl.sql  init_db.sql
src/: constants.rs  database.rs  error.rs  file.rs  guard.rs  main.rs  models.rs
src/database/: alarms.rs
src/file/: json.rs  s3.rs  s3_json.rs  storage_image.rs  utils.rs
