[package]
name = "file-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# HTTP server
actix-web = "4"
actix-web-httpauth = "0.8.2"
derive_more = { version = "1.0.0", features = ["full"] }

# Logging
env_logger = "0.11.5"
log = "0.4.22"

# Swagger UI
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }

# Environment variables
# A well-maintained fork of the dotenv crate. https://crates.io/crates/dotenvy
dotenvy = "0.15.7"
confik = "0.11"

# encryption
hex = "0.4.3"

# Database
oracle = "0.6.2"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
